refactor: streamline framework for settings automation